cmake_minimum_required(VERSION 3.16)
project(graphics3d-labs-source)



#add_subdirectory(audio)
#add_subdirectory(audio-generation1)
#add_subdirectory(audio-system)
#add_subdirectory(audio-user)







#add_subdirectory(source/app/acme)
#add_subdirectory(operating-system/operating-system-linux/node_linux)
#add_subdirectory(operating-system/operating-system-posix/acme_posix)
#add_subdirectory(operating-system/operating-system-linux/acme_linux)
##add_subdirectory(operating-system/operating-system-linux/node_linux)
#add_subdirectory(console/application_build_helper)
#add_subdirectory(source/console/build)
#add_subdirectory(console/hello)
#add_subdirectory(console/helloearth)
#add_subdirectory(source/app/apex)
#add_subdirectory(operating-system/operating-system-posix/apex_posix)
#add_subdirectory(operating-system/operating-system-linux/apex_linux)
#add_subdirectory(source/app/networking_bsd)
#add_subdirectory(source/app/build)
#add_subdirectory(source/console/build)
#add_subdirectory(source/app/aqua)
#add_subdirectory(console/hellosolarsystem)
#add_subdirectory(console/readlines)
#add_subdirectory(source/third/sn)
#add_subdirectory(source/app/aura)
#add_subdirectory(operating-system/operating-system-posix/aura_posix)
#add_subdirectory(operating-system/operating-system-linux/aura_linux)
#if(LXDE_DESKTOP)
#   add_subdirectory(operating-system/operating-system-posix/windowing_x11)
#   add_subdirectory(operating-system/operating-system-posix/node_gtk)
#   add_subdirectory(operating-system/operating-system-posix/node_gnome)
#   add_subdirectory(operating-system/operating-system-linux/operating_ambient_gtk_based)
#endif()
#if(XFCE_DESKTOP)
#   add_subdirectory(operating-system/operating-system-posix/windowing_x11)
#   add_subdirectory(operating-system/operating-system-posix/node_gtk)
#   add_subdirectory(operating-system/operating-system-posix/node_xfce)
#   add_subdirectory(operating-system/operating-system-linux/desktop_environment_xfce)
#endif()
#if(GTK_BASED_DESKTOP)
#    add_subdirectory(operating-system/operating-system-posix/windowing_x11)
#    add_subdirectory(operating-system/operating-system-posix/node_gtk)
#    add_subdirectory(operating-system/operating-system-posix/node_gnome)
#    add_subdirectory(operating-system/operating-system-linux/operating_ambient_gtk_based)
#endif()
#if(KDE_DESKTOP)
#    add_subdirectory(operating-system/operating-system-posix/windowing_x11)
#    add_subdirectory(operating-system/operating-system-posix/windowing_xcb)
#    add_subdirectory(operating-system/operating-system-posix/node_kde)
#    add_subdirectory(operating-system/operating-system-linux/desktop_environment_kde)
#endif()
#add_subdirectory(source/app/draw2d_cairo)
add_subdirectory(app-graphics3d/continuum)
#add_subdirectory(app/just_message_box)
#add_subdirectory(app/just_acme_message_box)
#add_subdirectory(app/just_apex_message_box)
#add_subdirectory(app/just_aqua_message_box)
#add_subdirectory(app/just_aura_message_box)
#add_subdirectory(app/message_box)
##add_subdirectory(source/app/gpu_opengl)
##add_subdirectory(source/app/shader)
#add_subdirectory(source/app/axis)
#add_subdirectory(source/app/crypto_openssl)
#add_subdirectory(source/app/compress_bzip2)
#add_subdirectory(source/app/compress_zlib)
#add_subdirectory(source/app/folder_zip)
#add_subdirectory(source/app/database_sqlite3)
#add_subdirectory(source/app/regular_expression_pcre2)
#add_subdirectory(source/app/base)
#add_subdirectory(source/app/experience_core)
#add_subdirectory(source/app/experience_anthill)
#add_subdirectory(source/app/experience_tranquillum)
#add_subdirectory(source/app/imaging_freeimage)
#add_subdirectory(operating-system/operating-system-posix/write_text_pango)
#add_subdirectory(app-simple/application)
#add_subdirectory(app-simple/box)
#add_subdirectory(app-simple/drawing)
#add_subdirectory(app-simple/change_grub_default_entry)
#add_subdirectory(app-simple/form)
#add_subdirectory(app-simple/networking_application)
#add_subdirectory(app-simple/http)
#add_subdirectory(app-simple/http_file_server)
#add_subdirectory(app-simple/notify_drawing)
#add_subdirectory(app-simple/shader)
#add_subdirectory(app-complex/drawing)
#add_subdirectory(app-complex/form)
#add_subdirectory(app-complex/video_input)
#add_subdirectory(app-complex/video_input_video_for_linux)
#add_subdirectory(app-complex/video_capture)
#add_subdirectory(game/light)
#add_subdirectory(app/nano2d)
#add_subdirectory(app/nanoui)
#add_subdirectory(app-simple/nanoui_example)
##add_subdirectory(app/bred)
##add_subdirectory(app/core)
#add_subdirectory(app-core/alarm)
#add_subdirectory(app-core/yee)
#add_subdirectory(app/wallpaper_transform_system_summary)
#add_subdirectory(app-core/ambient)
##add_subdirectory(app-core/audio_viewer)
#add_subdirectory(app-core/calculator)
#add_subdirectory(app-core/library)
#add_subdirectory(app-core/store)
#add_subdirectory(app-core/gcom)
#if(${LINUX})
##add_subdirectory(app-core/target_wallpaper_x11)
#if(WITH_XCB)
##add_subdirectory(app-core/target_wallpaper_xcb)
#endif()
#endif()
##add_subdirectory(app-core/hello_animation)
#add_subdirectory(app-core/hello_multiverse)
#add_subdirectory(app-core/flag)
#add_subdirectory(app-cidadedecuritiba/alphaclock)
#add_subdirectory(app-core/clockverse)
#add_subdirectory(app-core/projection)
#add_subdirectory(app-core/desk)
#add_subdirectory(app-core/weather)
##add_subdirectory(port/id3lib)
##add_subdirectory(audio/audio)
##add_subdirectory(operating-system/operating-system-posix/audio_alsa)
##add_subdirectory(audio/audio_decode_wave)
##add_subdirectory(audio/audio_resample_swresample)
#add_subdirectory(app-core/audioaura)
#add_subdirectory(app-core/auraclick)
#add_subdirectory(app-core/auratype)
#add_subdirectory(app-veriwell/music_midi_rtmidi)
##add_subdirectory(app-veriwell/audio_decode_libmpg123)
#add_subdirectory(app/api_ca2)
#add_subdirectory(app-interface/api_azure)
#add_subdirectory(app-interface/api_google)
#add_subdirectory(app-core/user_text_to_speech)
#add_subdirectory(app-core/text_to_speech_azure)
#add_subdirectory(app-core/text_to_speech_google)
#add_subdirectory(app-core/text_to_speech_streamelements)
#if(WIN32)
#   add_subdirectory(app-core/text_to_speech_sapi)
#endif()
#add_subdirectory(app-core/chronometer)
#add_subdirectory(app-core/userdatetime)
#add_subdirectory(app-core/timer)
#add_subdirectory(app-core/todo)
#add_subdirectory(app-core/multimedia)
#add_subdirectory(app/gpu_opengl)
#add_subdirectory(app/shader)
#add_subdirectory(app-core/fuel)
#add_subdirectory(app-veriwell/multimedia)
#add_subdirectory(app-veriwell/veriwell)
#add_subdirectory(app-veriwell/asciimedia)
##add_subdirectory(operating-system/operating-system-linux/audio_mixer_alsa)
#add_subdirectory(app-veriwell/waven)
#add_subdirectory(app-core/ffmpeg)
#add_subdirectory(app-veriwell/video_decode_ffmpeg)
#add_subdirectory(app-veriwell/verisimplevideo)
##add_subdirectory(operating-system/operating-system-linux/music_midi_alsa)
#add_subdirectory(app-veriwell/musical_player_lite)
#add_subdirectory(app-veriwell/musical_player)
#add_subdirectory(app-veriwell/keyboard)
#add_subdirectory(app-core/announcecom)
#add_subdirectory(app/programming)
#add_subdirectory(app/scripting)
#add_subdirectory(resident/resident)
#add_subdirectory(resident/resident_client)
#add_subdirectory(resident/resident_irc)
#add_subdirectory(resident/resident_twitch)
#add_subdirectory(app-interface/api_twitch)
#add_subdirectory(resident/resident_desktop)
#add_subdirectory(app-core/addressbook)
#add_subdirectory(app-core/file_manager)
#add_subdirectory(app-core/hash_base)
#add_subdirectory(app-core/hash_hub)
#add_subdirectory(app-core/plain_text)
#add_subdirectory(app-core/photo)
#add_subdirectory(app-core/picture)
##add_subdirectory(app-core/integration)
#add_subdirectory(design/biteditor)
#add_subdirectory(design/composite)
#add_subdirectory(design/design)
#add_subdirectory(design/text_format)
#add_subdirectory(design/text_format_rtf)
#add_subdirectory(graphics3d/impact3d)
#add_subdirectory(game/csgomatchmaking)
#add_subdirectory(game/estamira)
#add_subdirectory(game/game_of_life)
#add_subdirectory(game/quadsquare)
#add_subdirectory(game/tictactoe)
#add_subdirectory(game/arkanoid)
#add_subdirectory(game/sokoban)
#add_subdirectory(game/pacman)
#add_subdirectory(game/particle)
#add_subdirectory(game/coincube)
#add_subdirectory(game/arch001)
#add_subdirectory(tranquillum/composite)




add_custom_target(release_all)
add_dependencies(release_all _app_graphics3d_continuum)


